--- a/django-models/LibraryProject/relationship_app/templates/library_detail.html
+++ b/django-models/LibraryProject/relationship_app/templates/library_detail.html
@@ -8,9 +8,13 @@
     <h1>Library: {{ library.name }}</h1>
     <h2>Books in Library:</h2>
     <ul>
-        {% for book in library.books.all %}
-        <li>{{ book.title }} by {{ book.author.name }}</li>
-        {% endfor %}
+        {% if library.books.all %}
+            {% for book in library.books.all %}
+                <li>{{ book.title }} by {{ book.author.name }}</li>
+            {% endfor %}
+        {% else %}
+            <li>No books available in this library.</li>
+        {% endif %}
     </ul>
 </body>
 </html>
