--- a/django-models/LibraryProject/relationship_app/templates/relationship_app/admin_view.html
+++ b/django-models/LibraryProject/relationship_app/templates/relationship_app/admin_view.html
@@ -5,7 +5,7 @@
     <title>Admin View</title>
 </head>
 <body>
-    <h1>Admin Dashboard</h1>
-    <p>Welcome, Admin!</p>
+    <h1>Welcome Admin</h1>
+    <p>This is the admin area.</p>
 </body>
 </html>
