--- a/django-models/LibraryProject/relationship_app/templates/relationship_app/librarian_view.html
+++ b/django-models/LibraryProject/relationship_app/templates/relationship_app/librarian_view.html
@@ -5,7 +5,7 @@
     <title>Librarian View</title>
 </head>
 <body>
-    <h1>Librarian Dashboard</h1>
-    <p>Welcome, Librarian!</p>
+    <h1>Welcome Librarian</h1>
+    <p>This is the librarian area.</p>
 </body>
 </html>
