--- a/django-models/LibraryProject/relationship_app/templates/relationship_app/member_view.html
+++ b/django-models/LibraryProject/relationship_app/templates/relationship_app/member_view.html
@@ -5,7 +5,7 @@
     <title>Member View</title>
 </head>
 <body>
-    <h1>Member Dashboard</h1>
-    <p>Welcome, Member!</p>
+    <h1>Welcome Member</h1>
+    <p>This is the member area.</p>
 </body>
 </html>
