--- a/django_blog/blog/templates/blog/base.html
+++ b/django_blog/blog/templates/blog/base.html
@@ -1,16 +1,40 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Django Blog</title>
-    <link rel="stylesheet" href="{% static 'blog/css/style.css' %}">
+  <meta charset="utf-8">
+  <title>Django Blog</title>
+  {% load static %}
+  <link rel="stylesheet" href="{% static 'blog/css/style.css' %}">
 </head>
 <body>
-    <header>
-        <h1>Welcome to Django Blog</h1>
-    </header>
-    <main>
-        {% block content %}{% endblock %}
-    </main>
+  <header>
+    <nav>
+      <a href="{% url 'blog:post_list' %}">Home</a> |
+      {% if user.is_authenticated %}
+        <a href="{% url 'blog:profile' %}">Profile</a> |
+        <a href="{% url 'blog:post_create' %}">New Post</a> |
+        <a href="{% url 'blog:logout' %}">Logout</a>
+      {% else %}
+        <a href="{% url 'blog:login' %}">Login</a> |
+        <a href="{% url 'blog:register' %}">Register</a>
+      {% endif %}
+    </nav>
+  </header>
+
+  <main>
+    {% if messages %}
+      <ul class="messages">
+        {% for message in messages %}
+          <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+      </ul>
+    {% endif %}
+    {% block content %}{% endblock %}
+  </main>
+
+  <footer>
+    <p>&copy; Django Blog</p>
+  </footer>
 </body>
 </html>
+
