--- a/django_blog/blog/templates/blog/login.html
+++ b/django_blog/blog/templates/blog/login.html
@@ -6,15 +6,13 @@
     {{ form.non_field_errors }}
     <div>
       {{ form.username.label_tag }}<br>
-      {{ form.username }}
-      {{ form.username.errors }}
+      {{ form.username }}{{ form.username.errors }}
     </div>
     <div>
       {{ form.password.label_tag }}<br>
-      {{ form.password }}
-      {{ form.password.errors }}
+      {{ form.password }}{{ form.password.errors }}
     </div>
     <button type="submit">Login</button>
   </form>
-  <p>Don't have account? <a href="{% url 'blog:register' %}">Register</a></p>
+  <p>Don't have an account? <a href="{% url 'blog:register' %}">Register</a></p>
 {% endblock %}
