--- a/django_blog/blog/templates/blog/post_form.html
+++ b/django_blog/blog/templates/blog/post_form.html
@@ -1,7 +1,7 @@
 {% extends "blog/base.html" %}
 {% block content %}
-  <h2>Register</h2>
-  <form method="post" novalidate>
+  <h1>{% if action == 'create' %}Create Post{% else %}Edit Post{% endif %}</h1>
+  <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.non_field_errors }}
     {% for field in form %}
@@ -11,7 +11,7 @@
         {{ field.errors }}
       </div>
     {% endfor %}
-    <button type="submit">Register</button>
+    <button type="submit">Save</button>
   </form>
-  <p>Already a user? <a href="{% url 'blog:login' %}">Login</a></p>
+  <p><a href="{% url 'blog:post_list' %}">Back</a></p>
 {% endblock %}
