--- a/django_blog/blog/templates/blog/base.html
+++ b/django_blog/blog/templates/blog/base.html
@@ -1,3 +1,4 @@
+<!-- blog/templates/blog/base.html -->
 <!doctype html>
 <html lang="en">
 <head>
@@ -9,10 +10,10 @@
 <body>
   <header>
     <nav>
-      <a href="{% url 'blog:post_list' %}">Home</a> |
+      <a href="{% url 'blog:post-list' %}">Home</a> |
       {% if user.is_authenticated %}
         <a href="{% url 'blog:profile' %}">Profile</a> |
-        <a href="{% url 'blog:post_create' %}">New Post</a> |
+        <a href="{% url 'blog:post-create' %}">New Post</a> |
         <a href="{% url 'blog:logout' %}">Logout</a>
       {% else %}
         <a href="{% url 'blog:login' %}">Login</a> |
@@ -37,4 +38,3 @@
   </footer>
 </body>
 </html>
-
