--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -1,3 +1,4 @@
+<!-- blog/templates/blog/post_detail.html -->
 {% extends "blog/base.html" %}
 {% block content %}
   <article>
@@ -9,9 +10,48 @@
     <div>{{ post.content|linebreaks }}</div>
 
     {% if user == post.author %}
-      <p><a href="{% url 'blog:post_update' post.pk %}">Edit</a> |
-         <a href="{% url 'blog:post_delete' post.pk %}">Delete</a></p>
+      <p>
+        <a href="{% url 'blog:post-update' post.pk %}">Edit</a> |
+        <a href="{% url 'blog:post-delete' post.pk %}">Delete</a>
+      </p>
     {% endif %}
   </article>
-  <p><a href="{% url 'blog:post_list' %}">Back to posts</a></p>
+
+  <hr>
+  <section id="comments">
+    <h3>Comments ({{ comments.count }})</h3>
+    {% for comment in comments %}
+      <div class="comment">
+        <p><strong>{{ comment.author.username }}</strong> — {{ comment.created_at|date:"M d, Y H:i" }}</p>
+        <p>{{ comment.content|linebreaks }}</p>
+        {% if user == comment.author %}
+          <p>
+            <a href="{% url 'blog:comment-update' comment.pk %}">Edit</a> |
+            <a href="{% url 'blog:comment-delete' comment.pk %}">Delete</a>
+          </p>
+        {% endif %}
+      </div>
+      <hr>
+    {% empty %}
+      <p>No comments yet.</p>
+    {% endfor %}
+  </section>
+
+  <section id="add-comment">
+    <h3>Leave a comment</h3>
+    {% if user.is_authenticated %}
+      <form method="post" action="{% url 'blog:comment-create' post.pk %}">
+        {% csrf_token %}
+        {{ comment_form.non_field_errors }}
+        {{ comment_form.content.label_tag }}<br>
+        {{ comment_form.content }}<br>
+        {{ comment_form.content.errors }}
+        <button type="submit">Post Comment</button>
+      </form>
+    {% else %}
+      <p><a href="{% url 'blog:login' %}">Log in</a> to post a comment.</p>
+    {% endif %}
+  </section>
+
+  <p><a href="{% url 'blog:post-list' %}">Back to posts</a></p>
 {% endblock %}
