--- a/django_blog/blog/templates/blog/post_form.html
+++ b/django_blog/blog/templates/blog/post_form.html
@@ -1,3 +1,4 @@
+<!-- blog/templates/blog/post_form.html -->
 {% extends "blog/base.html" %}
 {% block content %}
   <h1>{% if action == 'create' %}Create Post{% else %}Edit Post{% endif %}</h1>
@@ -13,5 +14,5 @@
     {% endfor %}
     <button type="submit">Save</button>
   </form>
-  <p><a href="{% url 'blog:post_list' %}">Back</a></p>
+  <p><a href="{% url 'blog:post-list' %}">Back</a></p>
 {% endblock %}
