--- a/django_blog/blog/templates/blog/base.html
+++ b/django_blog/blog/templates/blog/base.html
@@ -8,21 +8,29 @@
   <link rel="stylesheet" href="{% static 'blog/css/style.css' %}">
 </head>
 <body>
-  <header>
-    <nav>
-      <a href="{% url 'blog:post-list' %}">Home</a> |
+  <header class="navbar">
+    <div class="nav-left">
+      <a href="{% url 'blog:post-list' %}" style="color:white; font-weight:600;">Django Blog</a>
+    </div>
+    <div class="nav-center">
+      <form action="{% url 'blog:search' %}" method="get" style="display:inline;">
+        <input type="text" name="q" placeholder="Search posts or tags..." required>
+        <button type="submit" class="btn">Search</button>
+      </form>
+    </div>
+    <div class="nav-right">
       {% if user.is_authenticated %}
-        <a href="{% url 'blog:profile' %}">Profile</a> |
-        <a href="{% url 'blog:post-create' %}">New Post</a> |
+        <a href="{% url 'blog:profile' %}">Profile</a>
+        <a href="{% url 'blog:post-create' %}">New Post</a>
         <a href="{% url 'blog:logout' %}">Logout</a>
       {% else %}
-        <a href="{% url 'blog:login' %}">Login</a> |
+        <a href="{% url 'blog:login' %}">Login</a>
         <a href="{% url 'blog:register' %}">Register</a>
       {% endif %}
-    </nav>
+    </div>
   </header>
 
-  <main>
+  <main class="container">
     {% if messages %}
       <ul class="messages">
         {% for message in messages %}
