--- a/django_blog/blog/templates/blog/post_list.html
+++ b/django_blog/blog/templates/blog/post_list.html
@@ -1,20 +1,31 @@
 <!-- blog/templates/blog/post_list.html -->
 {% extends "blog/base.html" %}
 {% block content %}
-  <h1>Posts</h1>
+  <h1>{% if tag %}Posts tagged "{{ tag }}"{% else %}Posts{% endif %}</h1>
+
   {% if user.is_authenticated %}
-    <p><a href="{% url 'blog:post-create' %}">Create new post</a></p>
+    <p><a class="btn" href="{% url 'blog:post-create' %}">Create new post</a></p>
   {% endif %}
 
   {% for post in posts %}
-    <article>
+    <article class="post">
       <h2><a href="{% url 'blog:post-detail' post.pk %}">{{ post.title }}</a></h2>
-      <p>By {{ post.author.username }} — {{ post.published_date|date:"M d, Y" }}</p>
+      <div class="meta">By {{ post.author.username }} — {{ post.published_date|date:"M d, Y" }}</div>
       <p>{{ post.content|truncatechars:200 }}</p>
+
+      {% if post.tags.all %}
+        <p>
+          Tags:
+          {% for tag in post.tags.all %}
+            <a href="{% url 'blog:tag-posts' tag.name %}">#{{ tag.name }}</a>{% if not forloop.last %}, {% endif %}
+          {% endfor %}
+        </p>
+      {% endif %}
+
       <p><a href="{% url 'blog:post-detail' post.pk %}">Read more</a></p>
-    </article><hr>
+    </article>
   {% empty %}
-    <p>No posts yet.</p>
+    <p>No posts found.</p>
   {% endfor %}
 
   {% if is_paginated %}
